@@ -51,6 +51,7 @@ S3method("vcov", "mcmc")
 S3method("quantile", "mcmc")
 S3method("as.mcmc.list", "bugs")
 S3method("print", "mcmc.list")
+S3method("pairs", "mcmc.list")
 S3method("quantile", "mcmc.list")
 S3method("coef", "mcmc.list")
 S3method("dcsd", "mcmc.list")
